fixed deleting commands bug with AST getting mis-aligned

--- a/src/client/css/touch-bar.css
+++ b/src/client/css/touch-bar.css
@@ -528,6 +528,9 @@ body.slate-touch > .slate-content {
         line-height: 46px;
         font-size: 18px;
     }
+        .touch-ast-empty > .touch-ast-delete {
+            display: none;
+        }
         .touch-ast-empty > input {
             position: absolute;
 
